# akademie-fastapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
diskuze/: __init__.py  models.py  schema.py
diskuze/dependencies/: auth.py  config.py  context.py  data_load.py  database.py
queries/: comment_references.graphql  create_comment.graphql  discussion_comments.graphql
utils/db/: __main__.py  db.sql  discussion.sql  user.sql
utils/wrk/: request.lua
